...
            }

            PullRefreshIndicator(
                isRefreshing,
                pullRefreshState,
                Modifier.align(Alignment.TopCenter)
                    .testTag("GalleryPullRefreshIndicator")
            )
        }
    }
}

@OptIn(ExperimentalMaterialApi::class)
...
